# InfraestructuraDigiliencia

./: .gitignore  EMBEDDINGS_CONFIG.md  LICENSE  README.md  digiliencia.py  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.ci.yml  docker-compose.yml
.github/workflows/: digiliencia-ci.yml
APT (Amenaza Persistente Avanzada)/: Informe APT.md  README_GQM_PRAGMATIC_APT.md  encuesta_APT_modelo.md  guia_metodologica_APT.md  mapeo_normativo_GQM_PRAGMATIC_APT.md  mapeo_preguntas_normativa_APT.md  marco_GQM_PRAGMATIC_APT.md  narrativa_explicativa_APT.md  plantilla_excel_IGM_ROI_APT.md  plantilla_reporte_ejecutivo_PPT_APT.md
CyberSegurIA-USAL/: README.md
CyberSegurIA-USAL/documentacion/: documento-informativo-cyberseguria.docx  guia-usuario-cyberseguria.docx  memoria-general-cyberseguria.docx
CyberSegurIA-USAL/plugins/: ai-engine-digiliencia-adapter.php  digiliencia-descargar-conversacion.php
CyberSegurIA-USAL/web/: bloque-chat.html  digiliencia-chat.css
Documentacion/: README.md
Documentacion/Acts/: actaReunion10-4-2025.md  actaReunion2-5-2025.md  actaReunion21-3-2025.md  actaReunion27-3-2025.md  actaReunion28-3-2025.md  tareas.md
Documentacion/ICRE26/APT (Amenaza Persistente Avanzada)/: Informe APT.docx  README_GQM_PRAGMATIC_APT.docx  README_kit_encuesta_APT.docx  README_kit_encuesta_APT.md  encuesta_APT_modelo.docx  guia_metodologica_APT.docx  mapeo_normativo_GQM_PRAGMATIC_APT.docx  mapeo_preguntas_normativa_APT.docx  marco_GQM_PRAGMATIC_APT.docx  matriz_PRAGMATIC_APT.docx  matriz_PRAGMATIC_APT.md  narrativa_GQM_PRAGMATIC_APT.docx  narrativa_GQM_PRAGMATIC_APT.md  narrativa_explicativa_APT.docx  plantilla_PPT_GQM_PRAGMATIC_APT.docx  plantilla_PPT_GQM_PRAGMATIC_APT.md  plantilla_excel_GQM_IGM_ROI_APT.docx  plantilla_excel_GQM_IGM_ROI_APT.md  plantilla_excel_IGM_ROI_APT.docx  plantilla_reporte_ejecutivo_PPT_APT.docx
Documentacion/ICRE26/Agentic AI-Driven Attack_/: 00-README-Kit-Encuesta.docx  00-README-Kit-Encuesta.md  01-Encuesta-Agentic-AI.docx  01-Encuesta-Agentic-AI.md  (+26 more)
Documentacion/requeriments/: Requirements.md  technologies.md  wikiIA.md
Documentacion/technicalReposts/: HostingerRepot.md  PostgreSQL.md  proveedorServicoNube.md
certs/: cert.pem  key.pem
classification_microservice/: .env.example  Dockerfile  classification_service.py  docker-compose.yml  main.py  models.py  pyproject.toml  start.sh  uv-utils.sh
data/: related_fields.md  topics.md
digiliencia/agents/: __init__.py  agent_config.py  agent_utils.py  base_agent.py  conversational_agent.py  factory.py  memory_manager.py  metrics_tracker.py  news_agent.py  router_agent.py  shared_memory.py
digiliencia/api_cli/: authentication.py  chat.py  console_cli.py  main.py
digiliencia/api_web/: index.html
digiliencia/cmd/: README.md  chunk_and_embed_news.py  classify_unfielded_news.py  classify_unlabeled_news.py  embedd_unembedded_news.py  scrap.py
digiliencia/configs/: db_config.py  env.py
digiliencia/data/: neomodel_manager.py  schemas.py
digiliencia/enums/: related_fields.py  topics.py
digiliencia/exc/: WEForum_exc.py  america_cyber_agency_exec.py  canadian_exec.py  dao_create_exc.py  dao_delete_exc.py  dao_read_exc.py  dao_update_exc.py  database_connection_exc.py  env_exc.py  invalid_database_config_exc.py  ncsc_exec.py  nist_exec.py
digiliencia/fastAPI/: DockerFile  entrypoint.sh  main.py  requirements.txt  tasks.py
digiliencia/models/: Dockerfile  app.py  embedding_api.md  embedding_manager.py  requirements.txt  test_app.py
digiliencia/nginx/: DockerFile  nginx.conf
digiliencia/postgres-db/: DockerFile
digiliencia/ui/: chatbot.py
digiliencia/utils/: embeddings.py  llm.py  scrap.py  scroll.txt  time.py
examples/: langchain-ollama-agent.py
examples/prompts/: improved_prompt.txt
services/embeddings/: .env.example  Dockerfile  README.md  __main__.py  main.py  pyproject.toml  requirements.txt  schemas.py  service.py  settings.py
src/: app.py
src/utils/: env_loader.py  scrap.py  time.py
test/: conftest.py  stress_test.py
test/data/: enums_validation_test.py  utils.py
test/db_test/: conftest.py  db_integrity_test.py  db_setup_test.py
test/enums/: enums_test.py
test/fastApi_test/: auth_test.py  chats_test.py  conftest.py  health_test.py  middleware_test.py  models_test.py  templates_test.py  v2_auth_test.py  v2_chats_test.py
test/neo4j/: conftest.py  llm_utils_test.py
test/utils/: embeddings_api_test.py  enums_test.py  llm_utils_test.py  time_test.py
(+2219 files in other folders)
