[project]
name = "infraestructura-digiliencia"
version = "0.1.0"
description = "Digiliencia is an AI powered platform for digital transformation enhancing cybersecurity"
requires-python = ">=3.13"
dependencies = [
    "dateparser>=1.2.1",
    "loguru>=0.7.3",
    "neo4j>=5.28.1",
    "pydantic-settings>=2.9.1",
    "rich>=14.0.0",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.10"]
