[project]
name = "infraestructura-digiliencia"
version = "0.1.0"
description = "Digiliencia is an AI powered platform for digital transformation enhancing cybersecurity"
requires-python = ">=3.13"
dependencies = [
    "dateparser>=1.2.1",
    "llama-index>=0.14.2",
    "llama-index-llms-ollama>=0.7.3",
    "llama-index-vector-stores-neo4jvector>=0.5.1",
    "loguru>=0.7.3",
    "neo4j>=5.28.1",
    "neomodel>=5.5.0",
    "pydantic-settings>=2.9.1",
    "requests>=2.31.0",
    "rich>=14.0.0",
    "selenium>=4.33.0",
    "streamlit>=1.49.1",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.10",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["digiliencia*"]
