[project]
name = "infraestructura-digiliencia"
version = "0.1.0"
description = "Digiliencia is an AI powered platform for digital transformation enhancing cybersecurity"
requires-python = ">=3.13"
dependencies = [
    "asyncclient>=0.0.1",
    "asyncpg>=0.30.0",
    "attrs==25.3.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "colorama==0.4.6",
    "coverage==7.8.0",
    "dateparser==1.2.1",
    "faker>=37.12.0",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "h11==0.16.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "isort==6.0.1",
    "llama-index>=0.14.2",
    "llama-index-llms-ollama>=0.7.3",
    "llama-index-vector-stores-neo4jvector>=0.5.1",
    "loguru==0.7.3",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "neo4j==5.28.1",
    "neomodel>=5.5.0",
    "numpy>=2.3.2",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "passlib>=1.7.4",
    "pluggy==1.5.0",
    "psycopg2-binary>=2.9.11",
    "pycparser==2.22",
    "pydantic-settings>=2.9.1",
    "pygments==2.19.1",
    "pysocks==1.7.1",
    "pytest==8.3.5",
    "pytest-asyncio>=1.2.0",
    "pytest-cov==6.1.1",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "requests>=2.31.0",
    "rich==14.0.0",
    "selenium==4.31.0",
    "slowapi>=0.1.9",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "sqlalchemy>=2.0.44",
    "starlette<0.50.0",
    "streamlit>=1.49.1",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.13.2",
    "urllib3==2.4.0",
    "webdriver-manager>=4.0.2",
    "websocket-client==1.8.0",
    "win32-setctime==1.2.0",
    "wsproto==1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.10",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["digiliencia*"]
